[gd_scene load_steps=9 format=3 uid="uid://dq6tvhqcy2aps"]

[ext_resource type="Script" path="res://assetsLibrary/EasyMenus/Scripts/main_menu_controller.gd" id="1_lbw7r"]
[ext_resource type="PackedScene" uid="uid://qlskttl1wjr7" path="res://assetsLibrary/EasyMenus/Scenes/options_menu.tscn" id="2_pwqpr"]
[ext_resource type="Texture2D" uid="uid://fybio0voh83y" path="res://Tiles/Cityscape.png" id="3_vjv2n"]
[ext_resource type="Texture2D" uid="uid://d4hsv6ditet2d" path="res://Tiles/smallscape.png" id="4_0a1hb"]
[ext_resource type="Texture2D" uid="uid://cyx1h2oqoxyst" path="res://Tiles/PC Computer - RPG Maker MV - Starlit Sky.png" id="5_5vfp5"]
[ext_resource type="Texture2D" uid="uid://b0j4xgpr5eltg" path="res://Tiles/export level 3.png" id="6_8np1r"]
[ext_resource type="AudioStream" uid="uid://cfu3vb73i126g" path="res://musics/wind_SFX.wav" id="7_8uw62"]

[sub_resource type="Curve2D" id="Curve2D_hwfya"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1, 4, 0, 0, 0, 0, -70, -41, 0, 0, 0, 0, -253, -41, 0, 0, 0, 0, -348, -12, 0, 0, 0, 0, -426, 48, 0, 0, 0, 0, -515, 148, 0, 0, 0, 0, -531, 275, 0, 0, 0, 0, -558, 421, 0, 0, 0, 0, -536, 564, 0, 0, 0, 0, -424, 642, 0, 0, 0, 0, -236, 671, 0, 0, 0, 0, -69, 659, 0, 0, 0, 0, 30, 586, 0, 0, 0, 0, 85, 504, 0, 0, 0, 0, 123, 409, 0, 0, 0, 0, 168, 304, 0, 0, 0, 0, 163, 182, 0, 0, 0, 0, 131, 98, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 20

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbw7r")

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -117.5
offset_top = 67.0
offset_right = 117.5
offset_bottom = 328.0
grow_horizontal = 2
theme_override_constants/separation = 15
metadata/_edit_group_ = true

[node name="Title" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Cat & Moon"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 30
text = "New Game
"

[node name="LoadGameButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 30
text = "Load Game
"

[node name="OptionsButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../NewGameButton")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="QuitButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../OptionsButton")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_pwqpr")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Background" type="Node2D" parent="."]

[node name="Cityscape" type="Sprite2D" parent="Background"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
position = Vector2(256, 628)
texture = ExtResource("3_vjv2n")

[node name="Cityscape2" type="Sprite2D" parent="Background"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
position = Vector2(764, 628)
texture = ExtResource("3_vjv2n")

[node name="Cityscape3" type="Sprite2D" parent="Background"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
position = Vector2(1275, 628)
texture = ExtResource("3_vjv2n")

[node name="Smallscape" type="Sprite2D" parent="Background"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
z_index = -1
position = Vector2(95, 603)
texture = ExtResource("4_0a1hb")

[node name="Smallscape2" type="Sprite2D" parent="Background"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
z_index = -1
position = Vector2(430, 592)
texture = ExtResource("4_0a1hb")

[node name="Smallscape3" type="Sprite2D" parent="Background"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
z_index = -1
position = Vector2(608, 604)
texture = ExtResource("4_0a1hb")

[node name="Smallscape4" type="Sprite2D" parent="Background"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
z_index = -1
position = Vector2(931, 596)
texture = ExtResource("4_0a1hb")

[node name="Smallscape5" type="Sprite2D" parent="Background"]
modulate = Color(0.694118, 0.694118, 0.694118, 1)
z_index = -1
position = Vector2(1121, 603)
texture = ExtResource("4_0a1hb")

[node name="PcComputer-RpgMakerMv-StarlitSky" type="Sprite2D" parent="Background"]
z_index = -4
position = Vector2(373, 370)
texture = ExtResource("5_5vfp5")

[node name="PcComputer-RpgMakerMv-StarlitSky2" type="Sprite2D" parent="Background"]
z_index = -4
position = Vector2(1189, 370)
texture = ExtResource("5_5vfp5")

[node name="ExportLevel3" type="Sprite2D" parent="Background"]
position = Vector2(844, 86)
texture = ExtResource("6_8np1r")

[node name="Path2D" type="Path2D" parent="Background/ExportLevel3"]
process_mode = 3
curve = SubResource("Curve2D_hwfya")

[node name="PathFollow2D" type="PathFollow2D" parent="Background/ExportLevel3/Path2D"]
position = Vector2(-7.84136, -1.60368)
rotation = -2.57669
progress = 10.4753

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_8uw62")
bus = &"Music"

[connection signal="pressed" from="Content/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Content/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="Content/OptionsButton" to="." method="open_options"]
[connection signal="pressed" from="Content/QuitButton" to="." method="quit"]
[connection signal="close" from="OptionsMenu" to="." method="close_options"]
